<resources>
    <string name="app_name">Ex 3</string>
    <string name="head">E-certificates</string>
    <string name="question1">1. Le pattern MVC signifie : </string>
    <string name="choix1">Multiple Versions Combined.</string>
    <string name="choix2">Model View Controller.</string>
    <string name="choix3">Main Value Compiled.</string>
    <string name="choix4">Mandatory Validated Controls.</string>
    <string name="question2">2. La syntaxe $[x] est permise en JSP : </string>
    <string name="radio1">Oui</string>
    <string name="radio2">Non</string>
    <string name="button1">Quitter</string>
    <string name="button2">Suivant</string>
    <string name="activity2text1">Voici les réponses que vous avez choisi : </string>
    <string name="activity2text2">1. Le pattern MVC signifie : </string>
    <string name="activity2text3">2. La syntaxe $[x] est permise en JSP : </string>
    <string name="button4">Retour</string>
</resources>